--- a/public/src/stylesheets/components/_form.scss
+++ b/public/src/stylesheets/components/_form.scss
@@ -1,4 +1,3 @@
-// Form.
 .form {
   &--sent {
     display: grid;
@@ -21,6 +20,7 @@
     }
     &--text {
       margin-bottom: unset;
+      resize: none;
     }
   }
   &__notification {
