--- a/public/src/stylesheets/layout/_header.scss
+++ b/public/src/stylesheets/layout/_header.scss
@@ -5,7 +5,7 @@
   width: 100%;
   z-index: 5;
   padding: 0.75rem 0;
-  backdrop-filter: blur(0.25rem);
+  // backdrop-filter: blur(0.25rem);
   @include themed {
     background: transparentize(theme($background), 0.1);
     border-bottom: 1px solid theme($border);
